# sureodds

./: .replit  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  replit.md  start.sh  vercel.json
attached_assets/: Pasted--SURE-ODDS-MASTER-PROMPT-SPORTPESA-STYLE-I-am-building-_1774306543540.txt  Pasted--SURE-ODDS-UPDATE-IMPORTANT-UPDATE-FIX-DATA-AUTOMATION-_1774386083252.txt  Pasted-02-02-13-323-Running-build-in-Washington-D-C-USA-East-i_1774389311922.txt  Pasted-02-11-40-314-Running-build-in-Washington-D-C-USA-East-i_1774308066675.txt  Pasted-03-09-13-708-Running-build-in-Washington-D-C-USA-East-i_1774311117072.txt  Pasted-03-13-18-043-Running-build-in-Washington-D-C-USA-East-i_1774311411231.txt  Pasted-2026-03-24T02-22-36-015101455Z-Downloading-cache-2026-0_1774319166382.txt  Pasted-2026-03-24T02-29-14-360937759Z-Downloading-cache-2026-0_1774319535848.txt  Pasted-2026-03-24T02-35-16-052813026Z-Downloading-cache-2026-0_1774319868389.txt  Pasted-2026-03-24T02-42-23-828270431Z-Collecting-supafunc-0-5-_1774320232386.txt  Pasted-2026-03-24T02-49-54-74682049Z-Requirement-already-satis_1774320689208.txt  Pasted-2026-03-24T02-56-06-654219622Z-Requirement-already-sati_1774321078687.txt  Pasted-2026-03-24T03-00-02-465994182Z-Requirement-already-sati_1774321290871.txt  Pasted-2026-03-24T04-51-39-040110171Z-server-run-2026-03-24T04_1774327945136.txt  Pasted-2026-03-24T22-34-11-091126531Z-3-auth-library-python-pu_1774387519390.txt  Pasted-2026-03-27T00-20-54-043531438Z-File-usr-local-lib-pytho_1774514909727.txt  (+9 more)
sure-odds/: .gitignore  README.md
(+78 files in other folders)
