[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.2",
    "apscheduler==3.10.4",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "schedule==1.2.2",
    "sqlalchemy==2.0.31",
    "supabase==2.5.3",
    "uvicorn[standard]==0.30.1",
]
